EXTRA_DIST = \
    mrim16.png  \
    mrim22.png  \
    mrim48.png

install-data-am:
	install mrim16.png ${datarootdir}/pixmaps/pidgin/protocols/16/mrim.png
	install mrim22.png ${datarootdir}/pixmaps/pidgin/protocols/22/mrim.png
	install mrim48.png ${datarootdir}/pixmaps/pidgin/protocols/48/mrim.png

uninstall-am:
	rm -f ${datarootdir}/pixmaps/pidgin/protocols/16/mrim.png
	rm -f ${datarootdir}/pixmaps/pidgin/protocols/22/mrim.png
	rm -f ${datarootdir}/pixmaps/pidgin/protocols/48/mrim.png

