EXTRA_DIST = \
    mrim16.png  \
    mrim22.png  \
    mrim48.png

install-data-am:
	install -D mrim16.png $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/16/mrim.png
	install -D mrim22.png $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/22/mrim.png
	install -D mrim48.png $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/48/mrim.png

uninstall-am:
	rm -f $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/16/mrim.png
	rm -f $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/22/mrim.png
	rm -f $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/48/mrim.png

