EXTRA_DIST = \
    mrim16.png  \
    mrim22.png  \
    mrim48.png

install-data-am:
	install -D -m 0644 mrim16.png $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/16/mrim.png
	install -D -m 0644 mrim22.png $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/22/mrim.png
	install -D -m 0644 mrim48.png $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/48/mrim.png

uninstall-am:
	rm -f $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/16/mrim.png
	rm -f $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/22/mrim.png
	rm -f $(DESTDIR)${datarootdir}/pixmaps/pidgin/protocols/48/mrim.png

